--- a/build.xml
+++ b/build.xml
@@ -18,27 +18,27 @@
 
     <!-- Verzeichnis in welches das myfaces.tld file kopiert werden soll
          (Praktisch zum autom. Kopieren der TLD in ein Fremd-Projekt) -->
-    <property name="tld-dest.dir" value="${temp.dir}"/>
+    <!--property name="tld-dest.dir" value="${temp.dir}"/-->
 
     <!-- WEB-INF Dir -->
     <property name="web-inf.dir" value="${project.dir}/web/WEB-INF"/>
 
     <!-- Destination Verzeichnis fürs Kompilieren -->
-    <property name="classes.dir" value="${project.dir}/web/WEB-INF/classes"/>
+    <property name="classes.dir" value="${temp.dir}/classes"/>
 
     <!-- Compiletime libraries (servlet.jar) -->
     <property name="lib.dir" value="${project.dir}/lib"/>
 
-    <!-- Name des JARs, das erzeugt werden soll -->
-    <property name="dest.file" value="${web-inf.dir}/lib/myfaces.jar"/>
-
     <!-- Examples dir -->
     <property name="examples.dir" value="${project.dir}/examples"/>
+
+    <!-- path to the "jsf-api.jar" file -->
+    <property name="jsf-api.file" value="${web-inf.dir}/lib/jsf-api.jar"/>
 
 
     <!-- Classpath fuer's Kompilieren -->
     <path id="project.class.path">
-        <pathelement location="${web-inf.dir}/lib/jsf-api.jar" />
+        <pathelement location="${jsf-api.file}" />
         <pathelement location="${web-inf.dir}/lib/jasper-compiler.jar"/>
         <pathelement location="${web-inf.dir}/lib/jasper-runtime.jar"/>
         <pathelement location="${web-inf.dir}/lib/mail.jar"/>
@@ -48,25 +48,24 @@
     <target name="compile">
         <mkdir dir="${classes.dir}"/>
         <javac srcdir="${src.dir}/myfaces"
-            destdir="${classes.dir}"
-            optimize="off"
-            classpathref="project.class.path">
+               destdir="${classes.dir}"
+               optimize="off"
+               classpathref="project.class.path">
         </javac>
         <javac srcdir="${src.dir}/example"
-            destdir="${classes.dir}"
-            optimize="off"
-            classpathref="project.class.path">
+               destdir="${classes.dir}"
+               optimize="off"
+               classpathref="project.class.path">
         </javac>
     </target>
 
-    <target name="-common">
+    <target name="-timestamp">
         <tstamp>
             <format property="TODAY_DE" pattern="dd.MM.yyyy HH:mm" locale="de"/>
         </tstamp>
     </target>
 
-
-    <target name="jar" depends="compile, -common">
+    <target name="jar" depends="compile, -timestamp">
         <mkdir dir="${temp.dir}"/>
 
         <manifest file="${temp.dir}/MANIFEST.MF">
@@ -78,7 +77,7 @@
             </section>
         </manifest>
 
-        <jar destfile="${dest.file}"
+        <jar destfile="${temp.dir}/myfaces.jar"
              manifest="${temp.dir}/MANIFEST.MF" >
             <fileset dir="${classes.dir}" includes="**"
                                           excludes=".dependency-info/**/*,
@@ -90,8 +89,7 @@
 
     <target name="examples-jar" depends="compile">
         <mkdir dir="${temp.dir}"/>
-
-        <jar destfile="${web-inf.dir}/lib/myfaces-examples.jar">
+        <jar destfile="${temp.dir}/myfaces-examples.jar">
             <fileset dir="${classes.dir}"
                      includes="net/sourceforge/myfaces/example/**/*" />
             <fileset dir="${src.dir}/example"
@@ -101,30 +99,32 @@
     </target>
 
     <target name="clean">
-        <delete quiet="true" failonerror="false" >
-            <fileset dir="${classes.dir}" includes="**"/>
-            <fileset dir="${temp.dir}" includes="**"/>
+        <delete quiet="true" failonerror="false" includeEmptyDirs="true">
+            <fileset dir="${classes.dir}"/>
+            <fileset dir="${temp.dir}"/>
+            <fileset dir="${project.dir}/web/WEB-INF/classes"/>
         </delete>
-        <delete dir="${temp.dir}"/>
     </target>
 
+    <!--
     <target name="copy-tld">
         <copy file="${project.dir}/web/WEB-INF/myfaces_basic.tld"
               todir="${tld-dest.dir}" />
         <copy file="${project.dir}/web/WEB-INF/myfaces_ext.tld"
             todir="${tld-dest.dir}"/>
     </target>
+    -->
 
-    <target name="all" depends="jar,copy-tld"/>
+    <target name="all" depends="jar,examples-jar"/>
 
 
-    <target name="release">
-        <!--
+    <target name="release" depends="clean,jar,examples-jar">
+        <mkdir dir="${temp.dir}/api"/>
         <javadoc sourcepath="${src.dir}/myfaces"
-                 destdir="${project.dir}/api"
+                 destdir="${temp.dir}/api"
                  packagenames="net.sourceforge.myfaces.*"
-                 classpathref="project.class.path"/>
-        -->
+                 classpathref="project.class.path"
+                 failonerror="true" />
         <mkdir dir="${temp.dir}"/>
         <tar destfile="${temp.dir}/myfaces-${manifest.impl.version}.tgz"
              compression="gzip">
@@ -133,6 +133,8 @@
                         excludes="web/WEB-INF/classes/**/*,
                                   temp/**,
                                   *.ipr,*.iws"/>
+            <tarfileset dir="${temp.dir}/api"
+                prefix="myfaces-${manifest.impl.version}/doc/api" />
         </tar>
     </target>
 
