--- a/src/myfaces/faces.properties
+++ b/src/myfaces/faces.properties
@@ -1,8 +1,7 @@
-
-# This file configures the mappings from factory names to factory
-# implementations.
+#
+# This file configures the mappings from factory names to factory implementations.
 # See javax.faces.FactoryFinder.
-
+#
 javax.faces.render.RenderKitFactory=net.sourceforge.myfaces.renderkit.RenderKitFactoryImpl
 javax.faces.lifecycle.LifecycleFactory=net.sourceforge.myfaces.lifecycle.LifecycleFactoryImpl
 javax.faces.tree.TreeFactory=net.sourceforge.myfaces.tree.TreeFactoryImpl
