--- a/build.xml
+++ b/build.xml
@@ -4,7 +4,7 @@
     <!-- Manifest-Infos -->
     <property name="manifest.impl.title" value="MyFaces"/>
     <property name="manifest.impl.version" value="0.1.3"/>
-    <property name="manifest.impl.vendor" value="Manfred Geiler"/>
+    <property name="manifest.impl.vendor" value="MyFaces Project Team"/>
 
     <property name="project.dir" value="${basedir}"/>
 
