*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165771 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/myfaces/myfaces.properties
+++ b/src/myfaces/myfaces.properties
@@ -57,3 +57,5 @@ UseAlwaysSaveComponentValue = true
 # @see net.sourceforge.myfaces.webapp.ServletMappingWithVirtualPath
 #
 UseFileExtensionServletMapping = true
+
+log_level = FINEST
