*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165783 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -98,7 +98,7 @@
         </jar>
     </target>
 
-    <target name="clean">
+    <target name="makeclean">
         <delete quiet="true" failonerror="false" includeEmptyDirs="true">
             <fileset dir="${classes.dir}"/>
             <fileset dir="${temp.dir}"/>
