*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165787 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -117,7 +117,7 @@
     <target name="all" depends="jar,examples-jar"/>
 
 
-    <target name="release" depends="clean,jar,examples-jar">
+    <target name="release" depends="makeclean,jar,examples-jar">
         <mkdir dir="${temp.dir}/api"/>
         <javadoc sourcepath="${src.dir}/myfaces"
                  destdir="${temp.dir}/api"
