*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165803 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/myfaces/myfaces.properties
+++ b/src/myfaces/myfaces.properties
@@ -9,7 +9,7 @@
 # During development this should always be set to false, because
 # otherwise changes in JSPs will not be recognized by MyFaces.
 #
-UseJspFileCache = false
+JspInfoApplicationCaching = false
 
 #
 # MyFaces supports two ways of saving state information:
@@ -28,7 +28,7 @@ UseJspFileCache = false
 #              and must do a search'n'replace before writing the
 #              content out to the response stream.
 #
-UseStateEncodingOnTheFly = false
+StateEncodingOnTheFly = false
 
 #
 # MyFaces supports two methods of encoding the state information:
@@ -41,21 +41,23 @@ UseStateEncodingOnTheFly = false
 #    This String is then written as one query parameter or hidden
 #    form input.
 #
-UseStateZipping = false
+StateZipping = false
 
 #
 # Normally MyFaces does not save a component's value when it comes from
 # the referenced model value. This assumes, that all model beans are able
 # to save and restore their state themselves.
 # If there are model beans, that are not clever enough to save their state
-# you should set this configuration option to true.
-#
-UseAlwaysSaveComponentValue = true
+# (i.e. you do not want to use the <save_state>-Tag for every bean property
+# that must be preserved) you should set this configuration option to true.
+# If all your beans are in application or session scope you can set this option
+# to false.
+AlwaysSaveComponentValue = true
 
 #
 # @see net.sourceforge.myfaces.webapp.ServletMappingWithExtension
 # @see net.sourceforge.myfaces.webapp.ServletMappingWithVirtualPath
 #
-UseFileExtensionServletMapping = true
+FileExtensionServletMapping = true
 
 log_level = FINEST
