*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165816 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/myfaces/myfaces.properties
+++ b/src/myfaces/myfaces.properties
@@ -52,7 +52,7 @@ StateZipping = false
 # that must be preserved) you should set this configuration option to true.
 # If all your beans are in application or session scope you can set this option
 # to false.
-AlwaysSaveComponentValue = true
+AlwaysSaveComponentValue = false
 
 #
 # @see net.sourceforge.myfaces.webapp.ServletMappingWithExtension
