*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165819 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/myfaces/myfaces.properties
+++ b/src/myfaces/myfaces.properties
@@ -43,16 +43,15 @@ StateEncodingOnTheFly = false
 #
 StateZipping = false
 
-#
-# Normally MyFaces does not save a component's value when it comes from
+# Transient means that MyFaces does not save a component's value when it comes from
 # the referenced model value. This assumes, that all model beans are able
 # to save and restore their state themselves.
 # If there are model beans, that are not clever enough to save their state
 # (i.e. you do not want to use the <save_state>-Tag for every bean property
-# that must be preserved) you should set this configuration option to true.
-# If all your beans are in application or session scope you can set this option
-# to false.
-AlwaysSaveComponentValue = false
+# that must be preserved) you should set this configuration option to false.
+# If all your beans are "clever" or in application or session scope you can
+# set this option to true.
+ComponentsTransientByDefault = true
 
 #
 # @see net.sourceforge.myfaces.webapp.ServletMappingWithExtension
