*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165831 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/myfaces/myfaces.properties
+++ b/src/myfaces/myfaces.properties
@@ -41,7 +41,7 @@ StateEncodingOnTheFly = false
 #    This String is then written as one query parameter or hidden
 #    form input.
 #
-StateZipping = true
+StateZipping = false
 
 # Transient means that MyFaces does not save a component's value when it comes from
 # the referenced model value. This assumes, that all model beans are able
