*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165843 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/myfaces/myfaces.properties
+++ b/src/myfaces/myfaces.properties
@@ -51,7 +51,7 @@ StateZipping = false
 # that must be preserved) you should set this configuration option to false.
 # If all your beans are "clever" or in application or session scope you can
 # set this option to true.
-ComponentsTransientByDefault = true
+ComponentsTransientByDefault = false
 
 #
 # @see net.sourceforge.myfaces.webapp.ServletMappingWithExtension
@@ -59,4 +59,5 @@ ComponentsTransientByDefault = true
 #
 FileExtensionServletMapping = true
 
-log_level = FINEST
+log_level = INFO
+#log_level = FINEST
