*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165846 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/example/org/apache/myfaces/example/example_messages.properties
+++ b/src/example/org/apache/myfaces/example/example_messages.properties
@@ -18,5 +18,4 @@ nav_Options         = Options
 alt_logo = MyFaces - the open source JSF implementation
 
 option_lang = View this page in
-option_lang_ge = German
-option_lang_en = English
+option_layout = Layout
