--- a/src/myfaces/myfaces.properties
+++ b/src/myfaces/myfaces.properties
@@ -10,6 +10,7 @@
 # otherwise changes in JSPs will not be recognized by MyFaces.
 #
 JspInfoApplicationCaching = false
+#JspInfoApplicationCaching = true
 
 #
 # MyFaces supports two ways of saving state information:
@@ -59,5 +60,6 @@ ComponentsTransientByDefault = false
 #
 FileExtensionServletMapping = true
 
-log_level = INFO
+#log_level = INFO
 #log_level = FINEST
+log_level = FINER
