--- a/src/myfaces/org/apache/myfaces/convert/converterMap.properties
+++ b/src/myfaces/org/apache/myfaces/convert/converterMap.properties
@@ -16,14 +16,28 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 #
 #
-# Define the implementation class for each converter.
+# Define the mapping between class and converter id
 #
 #
-BigDecimalConverter     = net.sourceforge.myfaces.convert.impl.BigDecimalConverter
-LongConverter           = net.sourceforge.myfaces.convert.impl.LongConverter
-BooleanConverter        = net.sourceforge.myfaces.convert.impl.BooleanConverter
-StringConverter         = net.sourceforge.myfaces.convert.impl.StringConverter
-StringArrayConverter    = net.sourceforge.myfaces.convert.impl.StringArrayConverter
-DateConverter           = net.sourceforge.myfaces.convert.impl.DateConverter
-TimeConverter           = net.sourceforge.myfaces.convert.impl.TimeConverter
-DateTimeConverter       = net.sourceforge.myfaces.convert.impl.DateTimeConverter
+#java.lang
+java.lang.Boolean           = BooleanConverter
+java.lang.Long              = LongConverter
+java.lang.String            = StringConverter
+
+#Arrays
+[Ljava.lang.String;         = StringArrayConverter
+
+#primitives
+boolean                     = BooleanConverter
+long                        = LongConverter
+
+#java.util
+java.util.Date              = DateConverter
+
+#java.math
+java.math.BigDecimal        = BigDecimalConverter
+
+#java.sql
+java.sql.Date               = DateConverter
+java.sql.Time               = TimeConverter
+java.sql.Timestamp          = DateTimeConverter
