*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165855 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/myfaces/myfaces.properties
+++ b/src/myfaces/myfaces.properties
@@ -52,7 +52,7 @@ StateZipping = false
 # that must be preserved) you should set this configuration option to false.
 # If all your beans are "clever" or in application or session scope you can
 # set this option to true.
-ComponentsTransientByDefault = false
+ComponentsTransientByDefault = true
 
 #
 # @see net.sourceforge.myfaces.webapp.ServletMappingWithExtension
@@ -60,6 +60,6 @@ ComponentsTransientByDefault = false
 #
 FileExtensionServletMapping = true
 
-#log_level = INFO
+log_level = INFO
 #log_level = FINEST
-log_level = FINER
+#log_level = FINER
