--- a/src/myfaces/org/apache/myfaces/convert/converterMap.properties
+++ b/src/myfaces/org/apache/myfaces/convert/converterMap.properties
@@ -27,9 +27,7 @@ java.lang.String            = StringConverter
 #Arrays
 [Ljava.lang.String;         = StringArrayConverter
 
-#primitives
-boolean                     = BooleanConverter
-long                        = LongConverter
+#primitives: mapped directly in method mapPrimitives()!
 
 #java.util
 java.util.Date              = DateConverter
