*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165861 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/myfaces/myfaces.properties
+++ b/src/myfaces/myfaces.properties
@@ -60,6 +60,6 @@ ComponentsTransientByDefault = true
 #
 FileExtensionServletMapping = true
 
-#log_level = INFO
-log_level = FINER
+log_level = INFO
+#log_level = FINER
 #log_level = FINEST
