--- a/src/example/org/apache/myfaces/examples/resource/example_messages.properties
+++ b/src/example/org/apache/myfaces/examples/resource/example_messages.properties
@@ -15,7 +15,7 @@ nav_Contact         = Contact
 nav_Copyright       = Copyright
 nav_Options         = Options
 nav_Components      = Components
-nav_Selectbox       = SelectBox
+nav_Selectbox       = Selectboxes
 
 
 alt_logo = MyFaces - the open source JSF implementation
