*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165868 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/example/org/apache/myfaces/examples/resource/example_messages.properties
+++ b/src/example/org/apache/myfaces/examples/resource/example_messages.properties
@@ -15,7 +15,7 @@ nav_Contact         = Contact
 nav_Copyright       = Copyright
 nav_Options         = Options
 nav_Components      = Components
-nav_Selectbox       = Selectboxes
+nav_Selectbox       = Selectboxes (CarConfigurator)
 
 
 alt_logo = MyFaces - the open source JSF implementation
@@ -32,7 +32,7 @@ label_cars = Model
 label_colors = Colors
 label_extras = Extras
 button_calcprice = Calculate price
-msg_price = Your price: \u20AC\u00A0{0,number,#.##}
+msg_price = {0,choice,0#Configure your fondest wish!|1< Your price: \u20AC\u00A0{0}}
 color_black = black
 color_blue = blue
 color_marine = marine blue
