*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165872 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/example/org/apache/myfaces/examples/resource/example_messages.properties
+++ b/src/example/org/apache/myfaces/examples/resource/example_messages.properties
@@ -41,4 +41,5 @@ extra_aircond = Aircondition
 extra_sideab = Sideairbag
 extra_mirrowheat = Heated Mirrors
 extra_leaderseat = Leatherseats
+discount_1 = I want an aggregated rebate
 
