*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165873 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/myfaces/myfaces.properties
+++ b/src/myfaces/myfaces.properties
@@ -9,8 +9,8 @@
 # During development this should always be set to false, because
 # otherwise changes in JSPs will not be recognized by MyFaces.
 #
-JspInfoApplicationCaching = false
-#JspInfoApplicationCaching = true
+#JspInfoApplicationCaching = false
+JspInfoApplicationCaching = true
 
 #
 # MyFaces supports two ways of saving state information:
@@ -29,6 +29,7 @@ JspInfoApplicationCaching = false
 #              and must do a search'n'replace before writing the
 #              content out to the response stream.
 #
+# deprecated - always leave false!
 StateEncodingOnTheFly = false
 
 #
@@ -60,6 +61,6 @@ ComponentsTransientByDefault = true
 #
 FileExtensionServletMapping = true
 
-#log_level = INFO
-log_level = FINER
+log_level = INFO
+#log_level = FINER
 #log_level = FINEST
