*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165878 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/myfaces/myfaces.properties
+++ b/src/myfaces/myfaces.properties
@@ -53,6 +53,8 @@ StateZipping = false
 # that must be preserved) you should set this configuration option to false.
 # If all your beans are "clever" or in application or session scope you can
 # set this option to true.
+#
+# deprecated - always leave true!
 ComponentsTransientByDefault = true
 
 #
