--- a/src/myfaces/myfaces.properties
+++ b/src/myfaces/myfaces.properties
@@ -9,8 +9,8 @@
 # During development this should always be set to false, because
 # otherwise changes in JSPs will not be recognized by MyFaces.
 #
-#JspInfoApplicationCaching = false
-JspInfoApplicationCaching = true
+JspInfoApplicationCaching = false
+#JspInfoApplicationCaching = true
 
 #
 # MyFaces supports two ways of saving state information:
@@ -43,7 +43,7 @@ StateEncodingOnTheFly = false
 #    This String is then written as one query parameter or hidden
 #    form input.
 #
-StateZipping = true
+StateZipping = false
 
 # Transient means that MyFaces does not save a component's value when it comes from
 # the referenced model value. This assumes, that all model beans are able
