*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165896 13f79535-47bb-0310-9956-ffa450edef68

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -72,7 +72,7 @@
         * "client_minimized_zipped" = like "client_minimal", but additionally state info is zipped (GZIP), encoded to allowed characters (Base64) written as one query parameter or hidden form input.
         -->
         <param-name>stateSavingMode</param-name>
-        <param-value>server_session</param-value>
+        <param-value>client_minimized</param-value>
     </context-param>
 
 
