--- a/src/myfaces/myfaces.properties
+++ b/src/myfaces/myfaces.properties
@@ -1,36 +1,7 @@
 #
 # This file configures myfaces behavior
 #
-
+# deprecated (no longer used)
+# All configuration options can now be set in the web.xml
 #
-# MyFaces supports two ways of saving state information:
-# 1. "On the fly"
-#    State info is encoded within HREFs and FORMs at once.
-#    Drawback: The state of dynamic request time attributes that
-#              are calculated during JSP processing will not be
-#              saved correctly. Also the state of dynamically added
-#              or removed UIComponents will not be saved correctly.
-# 2. "Tokens"
-#    State info is encoded within HREFs and FORMs as tokens (placeholders)
-#    that are replaced by the real state info after the JSP processing
-#    of MyFaces tags has finished.
-#    Drawback: The usefaces tag must buffer all produced HTML code
-#              within it's body (see javax.servlet.jsp.tagext.BodyContent)
-#              and must do a search'n'replace before writing the
-#              content out to the response stream.
-#
-# deprecated - always leave false!
-StateEncodingOnTheFly = false
-
-# Transient means that MyFaces does not save a component's value when it comes from
-# the referenced model value. This assumes, that all model beans are able
-# to save and restore their state themselves.
-# If there are model beans, that are not clever enough to save their state
-# (i.e. you do not want to use the <save_state>-Tag for every bean property
-# that must be preserved) you should set this configuration option to false.
-# If all your beans are "clever" or in application or session scope you can
-# set this option to true.
-#
-# deprecated - always leave true!
-ComponentsTransientByDefault = true
 
