--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -59,7 +59,6 @@
         -->
         <param-name>servletMappingMode</param-name>
         <param-value>extension</param-value>
-        <!--<param-value>virtual_path</param-value>-->
     </context-param>
 
     <context-param>
@@ -76,13 +75,32 @@
     </context-param>
 
     <context-param>
-        <!-- TODO: Documentation -->
+        <!--
+        * Init parameter "autoCreateRequestScopeBeans"
+        * If you are using the "client_minimized" state saving feature it makes
+        * sense to only use request scope beans and not to use session beans.
+        * Well, there is one problem with request scope beans. They do not yet
+        * exist at the beginning of the faces lifecycle, though this could be
+        * necessary when currentValue is called for any component.
+        * Setting this parameter to true, means that during the reconstitute
+        * request tree phase, all request scope beans get automatically
+        * (re)created.
+        -->
         <param-name>autoCreateRequestScopeBeans</param-name>
         <param-value>true</param-value>
     </context-param>
 
     <context-param>
-        <!-- TODO: Documentation -->
+        <!--
+        * Init parameter "discardInternalAttributes"
+        * This parameter is only used in the two state saving modes
+        * "server_session" and "client_serialized" and is meant to reduce
+        * the size of the tree to be saved.
+        * Setting it to true means, that all internal attributes
+        * (i.e. attributes with a name starting with "javax." or
+        * "net.sourceforge.myfaces.") are removed prior to saving the tree
+        * for the next request.
+        -->
         <param-name>discardInternalAttributes</param-name>
         <param-value>true</param-value>
     </context-param>
