*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165917 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -22,7 +22,7 @@
     <!-- destination dir for compiling -->
     <property name="main.classes.dir" value="${temp.dir}/main_classes"/>
 
-    <!-- source dir for compiling -->
+    <!-- dir with the TLDs -->
     <property name="tlds.dir" value="${project.dir}\tlds"/>
 
     <!-- examples dir -->
